--- a/less/basic.less
+++ b/less/basic.less
@@ -3,7 +3,9 @@ html {
 	position: relative;
 }
 body {
-	padding-top: (@navbar-height + 10px);
+	@media (min-width: @grid-float-breakpoint) {
+		padding-top: (@navbar-height + 10px);
+	}
 	margin-bottom: (@footer-height + @footer-margin);
 }
 
