프로그레션 컨텐츠를 추가하고, 탭으로 구분하여 함수로부터 출력

--- a/less/__bootstrap.less
+++ b/less/__bootstrap.less
@@ -39,7 +39,7 @@
 // @import "@{bootstrap-path}/list-group.less";
 // @import "@{bootstrap-path}/panels.less";
 // @import "@{bootstrap-path}/responsive-embed.less";
-// @import "@{bootstrap-path}/wells.less";
+@import "@{bootstrap-path}/wells.less";
 // @import "@{bootstrap-path}/close.less";
 
 // Components w/ JavaScript
