--- a/less/_components.less
+++ b/less/_components.less
@@ -1,11 +1,34 @@
-img {
-	border: 1px solid @line;
-	width: 140px;
-	@media (min-width: @grid-float-breakpoint) {
-		width: 192px;
+@thumbnail-width-mobile:  140px;
+@thumbnail-width-desktop: 192px;
+
+// 컨텐츠 정렬
+.site-main .list-inline {
+	li {
+		vertical-align: top;
 	}
 }
 
-.site-main ul {
-	.list-inline;
+// 컨텐츠 이미지 크기
+img {
+	border: 1px solid @line;
+	width: @thumbnail-width-mobile;
+	height: 80px;
+	@media (min-width: @grid-float-breakpoint) {
+		width: @thumbnail-width-desktop;
+		height: 109px;
+	}
+}
+
+// Well
+.well {
+	.no-border();
+	.no-shadow();
+}
+
+// 모바일에서 탭 제목 여백
+.nav-tabs > li > a {
+	padding: 8px;
+	@media (min-width: @grid-float-breakpoint) {
+		padding: 10px 15px;
+	}
 }
