--- a/less/_headings.less
+++ b/less/_headings.less
@@ -13,9 +13,12 @@
 h3 {
 	.11px;
 	.normal;
+	max-width: @thumbnail-width-mobile;
+	line-height: 1.5;
 	@media (min-width: @grid-float-breakpoint) {
 		.13px;
 		.strong;
+		max-width: @thumbnail-width-desktop;
 	}
 	margin-top: 4px;
 	margin-bottom: 20px;
